Update MultiSetTest.java: eliminated warnings.